@@ -3,6 +3,7 @@ package api.media.kg.config.security;
 import api.media.kg.entity.ProfileEntity;
 import api.media.kg.entity.ProfileRoleEntity;
 import api.media.kg.enums.GeneralStatus;
+import api.media.kg.enums.ProfileRole;
 import api.media.kg.repository.ProfileRoleRepository;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -13,20 +14,32 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class UserDetailsImpl implements UserDetails {
+    private Long id;
+    private String name;
+    private String username;
+    private String password;
+    private Collection<? extends GrantedAuthority> authorities;
+    private GeneralStatus status;
 
-    private final String username;
-    private final String password;
-    private final List<GrantedAuthority> authorities;
-    private final boolean isActive;
-
-    public UserDetailsImpl(ProfileEntity profile, List<ProfileRoleEntity> roles) {
+    public UserDetailsImpl(ProfileEntity profile,
+                           List<ProfileRole> roleList) {
+        this.id = profile.getId();
+        this.name = profile.getName();
         this.username = profile.getUsername();
         this.password = profile.getPassword();
-        this.authorities = roles.stream()
-                .map(role -> new SimpleGrantedAuthority(role.getRoles().name()))
-                .collect(Collectors.toList());
-        this.isActive = profile.getStatus() == GeneralStatus.ACTIVE;
+        this.status = profile.getStatus();
+        this.authorities = roleList.stream()
+                .map(role -> new SimpleGrantedAuthority(role.name())).toList();
+
     }
+//    public UserDetailsImpl(ProfileEntity profile, List<ProfileRoleEntity> roles) {
+//        this.username = profile.getUsername();
+//        this.password = profile.getPassword();
+//        this.authorities = roles.stream()
+//                .map(role -> new SimpleGrantedAuthority(role.getRoles().name()))
+//                .collect(Collectors.toList());
+//        this.isActive = profile.getStatus() == GeneralStatus.ACTIVE;
+//    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
@@ -50,7 +63,7 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public boolean isAccountNonLocked() {
-        return true;
+        return status.equals(GeneralStatus.ACTIVE);
     }
 
     @Override
@@ -60,6 +73,22 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public boolean isEnabled() {
-        return isActive;
+        return true;
+    }
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
     }
 }
